--- a/package.json
+++ b/package.json
@@ -96,13 +96,13 @@
                 "configurationAttributes": {
                     "launch": {
                         "required": [
-                            "projectRoot"
+                            "pathToBinary"
                         ],
                         "properties": {
-                            "projectRoot": {
+                            "pathToBinary": {
                                 "type": "string",
-                                "description": "Absolute path to project root folder.",
-                                "default": "${workspaceFolder}"
+                                "description": "Absolute path to the compiled binary. *NOTE* the .o file produced by the zig compiler must also be alongside the binary.",
+                                "default": "${workspaceFolder}/main"
                             },
                             "stopOnEntry": {
                                 "type": "boolean",
@@ -116,8 +116,8 @@
                     {
                         "type": "zig",
                         "request": "launch",
-                        "name": "Zig Launch",
-                        "projectRoot": "${workspaceFolder}",
+                        "name": "Zig Binary",
+                        "pathToBinary": "${workspaceFolder}/main",
                         "stopOnEntry": true
                     }
                 ],
@@ -128,8 +128,8 @@
                         "body": {
                             "type": "zig",
                             "request": "launch",
-                            "name": "Zig Launch",
-                            "projectRoot": "^\"\\${workspaceFolder}\"",
+                            "name": "Zig Binary",
+                            "pathToBinary": "^\"\\${workspaceFolder}/main\"",
                             "stopOnEntry": true
                         }
                     }
@@ -146,7 +146,7 @@
     },
     "devDependencies": {
         "@types/mocha": "^2.2.48",
-        "@types/node": "^7.0.67",
+        "@types/node": "^7.10.6",
         "typescript": "^2.9.2",
         "vscode": "^1.1.33"
     },
