--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
                 "configurationAttributes": {
                     "launch": {
                         "required": [
-                            "pathToBinary",
-                            "pathToDebugger"
+                            "pathToDebugger",
+                            "pathToBinary"
                         ],
                         "properties": {
                             "pathToDebugger": {
@@ -116,6 +116,25 @@
                                     "type": "string"
                                 },
                                 "default": []
+                            }
+                        }
+                    },
+                    "attach": {
+                        "required": [
+                            "pathToDebugger",
+                            "processId"
+                        ],
+                        "properties": {
+                            "pathToDebugger": {
+                                "type": "string",
+                                "description": "Path to the gdb or lldb-mi debugger."
+                            },
+							"processId": {
+								"description": "Attach to an already running process given by process id.",
+								"type": [
+									"number"
+								],
+								"default": "${command:PickProcess}"
                             }
                         }
                     }
@@ -148,6 +167,27 @@
                             "pathToDebugger": "/Applications/Xcode.app/Contents/Developer/usr/bin/lldb-mi",
                             "pathToBinary": "^\"\\${workspaceFolder}/main\"",
                             "args": []
+                        }
+                    },                    {
+                        "label": "Zig: Debug running process with gdb",
+                        "description": "Debug Zig binary with the gdb debugger by attaching to the given process id.",
+                        "body": {
+                            "type": "zig",
+                            "request": "attach",
+                            "name": "Zig Attach (gdb)",
+                            "pathToDebugger": "gdb",
+                            "processId": "Replace this string with numeric process id (no quotes)"
+                        }
+                    },
+                    {
+                        "label": "Zig: Debug running process with lldb-mi",
+                        "description": "Debug Zig binary with the lldb-mi debugger by attaching to the given process id.",
+                        "body": {
+                            "type": "zig",
+                            "request": "attach",
+                            "name": "Zig Attach (lldb-mi)",
+                            "pathToDebugger": "/Applications/Xcode.app/Contents/Developer/usr/bin/lldb-mi",
+                            "processId": "Replace this string with numeric process id (no quotes)"
                         }
                     }
                 ]
